--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,15 @@
 })
 
 <body>
-    <!-- header include -->
-    @@include('html/partials/header.html')
+    <div class="container container--lg">
+        <!-- header include -->
+        @@include('html/partials/header.html')
 
-    <!-- main -->
-    <main></main>
-    <!-- footer include -->
-    @@include('html/partials/footer.html')
+        <!-- main -->
+        <main></main>
+        <!-- footer include -->
+        @@include('html/partials/footer.html')
+    </div>
 
     <!-- scripts -->
     <script src="js/script.min.js"></script>
