--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                                             <div class="card__image-wrapper">
                                                 <picture>
                                                     <source srcset="img/card/grinder.webp">
-                                                    <img class="card__image" src="img/card/grinder.jpg" alt="">
+                                                    <img class="card__image" src="img/card/grinder.png" alt="">
                                                 </picture>
                                             </div>
 
@@ -123,7 +123,7 @@
                                             <div class="card__image-wrapper">
                                                 <picture>
                                                     <source srcset="img/card/grinder.webp">
-                                                    <img class="card__image" src="img/card/grinder.jpg" alt="">
+                                                    <img class="card__image" src="img/card/grinder.png" alt="">
                                                 </picture>
                                             </div>
 
@@ -197,7 +197,7 @@
                                             <div class="card__image-wrapper">
                                                 <picture>
                                                     <source srcset="img/card/grinder.webp">
-                                                    <img class="card__image" src="img/card/grinder.jpg" alt="">
+                                                    <img class="card__image" src="img/card/grinder.png" alt="">
                                                 </picture>
                                             </div>
 
@@ -282,7 +282,15 @@
                 </section>
             </div> <!-- end of section sale-->
 
+            <!-- banner 1 -->
+            <div class="container container--sm">
+                <div class="banner banner--1">
+                    <p class="banner__title">СКИДКИ НА ТОПОВЫЕ АКСЕССУАРЫ <strong>до -25%</strong></p>
 
+                    <button type="button" class="btn btn--lg btn--orange banner__btn">ВСЕ СКИДКИ</button>
+
+                </div>
+            </div>
 
         </main>
         <!-- footer include -->
