feat: add section about

--- a/src/index.html
+++ b/src/index.html
@@ -742,6 +742,30 @@
                 </div>
             </div>
 
+            <!-- section about us -->
+            <section class="section section--about">
+                <div class="container container--sm">
+                    <div class="section__inner">
+                        <picture>
+                            <source srcset="img/section/about/bong.jpg">
+                            <img src="img/section/about/bong.jpg" alt="">
+                        </picture>
+                        <div class="section__content">
+                            <h1 class="section__title">О нас</h1>
+                            <p class="section__text">Добро пожаловать в московский хэдшоп «Bong420». Мы продаём товары
+                                для курения и парения, которые сделают ароматное хобби приятней.</p>
+
+                            <p class="section__text">Основную часть нашего ассортимента составляет главный проводник в
+                                дымную контркультуру — его Величество бонг. Этот девайс стал абсолютным фаворитом вполне
+                                заслуженно. Им легко и удобно пользоваться — можно навсегда забыть о манипуляциях с
+                                пластиковыми бутылками и поделками из фольги.</p>
+
+                            <a href="#" class="section__link">узнать больше</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
         <!-- footer include -->
         @@include('html/partials/footer.html')
