--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,76 @@
     <main>
         <!-- banner -->
         <div class="container container--md">
-            <div class="banner">
-                <div class="banner__sale">
-                    <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
-                    <picture>
-                        <source srcset="img/logo/logo-banner.webp">
-                        <img src="img/logo/logo-banner.png" alt="">
-                    </picture>
+            <div class="banner banner--main">
+                <div class="swiper swiper--banner">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="banner__sale">
+                                <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
+                                <picture>
+                                    <source srcset="img/logo/logo-banner.webp">
+                                    <img src="img/logo/logo-banner.png" alt="">
+                                </picture>
 
-                    <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
+                                <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
+                            </div>
+                            <div class="banner__delivery">
+                                <h2 class="banner__title">Бесплатная <br> доставка <br>
+                                    по России</h2>
+                                <a href="#" class="btn btn--lg btn--black banner__delivery-btn">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="banner__sale">
+                                <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
+                                <picture>
+                                    <source srcset="img/logo/logo-banner.webp">
+                                    <img src="img/logo/logo-banner.png" alt="">
+                                </picture>
+
+                                <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
+                            </div>
+                            <div class="banner__delivery">
+                                <h2 class="banner__title">Бесплатная <br> доставка <br>
+                                    по России</h2>
+                                <a href="#" class="btn btn--lg btn--black banner__delivery-btn">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="banner__sale">
+                                <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
+                                <picture>
+                                    <source srcset="img/logo/logo-banner.webp">
+                                    <img src="img/logo/logo-banner.png" alt="">
+                                </picture>
+
+                                <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
+                            </div>
+                            <div class="banner__delivery">
+                                <h2 class="banner__title">Бесплатная <br> доставка <br>
+                                    по России</h2>
+                                <a href="#" class="btn btn--lg btn--black banner__delivery-btn">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="banner__sale">
+                                <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
+                                <picture>
+                                    <source srcset="img/logo/logo-banner.webp">
+                                    <img src="img/logo/logo-banner.png" alt="">
+                                </picture>
+
+                                <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
+                            </div>
+                            <div class="banner__delivery">
+                                <h2 class="banner__title">Бесплатная <br> доставка <br>
+                                    по России</h2>
+                                <a href="#" class="btn btn--lg btn--black banner__delivery-btn">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="banner__delivery">
-                    <h2 class="banner__title">Бесплатная <br> доставка <br>
-                        по России</h2>
-                    <a href="#" class="btn btn--lg btn--black banner__delivery-btn">Подробнее</a>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
 
