feat: add adaptive for index

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                                 <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
                                 <picture>
                                     <source srcset="img/logo/logo-banner.webp">
-                                    <img src="img/logo/logo-banner.png" alt="">
+                                    <img src="img/logo/logo-banner.png" class="banner__image" alt="">
                                 </picture>
 
                                 <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
@@ -755,6 +755,7 @@
                     <h1 class="section__title">Бренды</h1>
                     <div class="section__content">
                         <picture>
+                            <source srcset="img/section/brands/bg-lg.webp" media="(max-width: 1439px)">
                             <source srcset="img/section/brands/bg.webp">
                             <img src="img/section/brands/bg.jpg" alt="">
                         </picture>
@@ -787,7 +788,7 @@
                 <div class="section__inner">
                     <picture>
                         <source srcset="img/section/about/bong.jpg">
-                        <img src="img/section/about/bong.jpg" alt="">
+                        <img src="img/section/about/bong.jpg" class="section__image" alt="">
                     </picture>
                     <div class="section__content">
                         <h1 class="section__title">О нас</h1>
