fix: banner 2 form input type email

--- a/src/index.html
+++ b/src/index.html
@@ -785,7 +785,7 @@
                     </p>
 
                     <form class="form form--subscribe" action="/">
-                        <input type="mail" class="form__input" placeholder="Введите свой e-mail">
+                        <input type="email" class="form__input" placeholder="Введите свой e-mail">
 
                         <button type="submit" class="btn btn btn--orange form__btn">ПОДПИСАТЬСЯ</button>
                     </form>
