feat: add adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                                 <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
                                 <picture>
                                     <source srcset="img/logo/logo-banner.webp">
-                                    <img src="img/logo/logo-banner.png" alt="">
+                                    <img src="img/logo/logo-banner.png" class="banner__image" alt="">
                                 </picture>
 
                                 <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
@@ -54,7 +54,7 @@
                                 <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
                                 <picture>
                                     <source srcset="img/logo/logo-banner.webp">
-                                    <img src="img/logo/logo-banner.png" alt="">
+                                    <img src="img/logo/logo-banner.png" class="banner__image" alt="">
                                 </picture>
 
                                 <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
@@ -70,7 +70,7 @@
                                 <h2 class="banner__title">Скидки <span class="hightlight-yellow">до 30%</span></h2>
                                 <picture>
                                     <source srcset="img/logo/logo-banner.webp">
-                                    <img src="img/logo/logo-banner.png" alt="">
+                                    <img src="img/logo/logo-banner.png" class="banner__image" alt="">
                                 </picture>
 
                                 <a href="#" class="btn btn--lg btn--orange banner__sale-btn">В каталог</a>
