feat: add swiper to section advantages

--- a/src/index.html
+++ b/src/index.html
@@ -755,6 +755,58 @@
                                 контейнер</p>
                         </article>
                     </div>
+
+                    <div class="swiper swiper--advantages">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <article class="card card--advantages">
+                                    <div class="card__image-wrapper">
+                                        <img src="img/card/advantages/flag.svg" alt="">
+                                    </div>
+                                    <h4 class="card__title">Бесплатная <br>
+                                        доставка </h4>
+                                    <p class="card__text">Бесплатно доставим от 3000 ₽ курьером по Москве и от 5000
+                                        ₽ почтой
+                                        или СДЭК по РФ</p>
+                                </article>
+                            </div>
+                            <div class="swiper-slide">
+                                <article class="card card--advantages">
+                                    <div class="card__image-wrapper">
+                                        <img src="img/card/advantages/check-shield.svg" alt="">
+                                    </div>
+                                    <h4 class="card__title">Гарантия <br>
+                                        лучшей цены </h4>
+                                    <p class="card__text">Сделаем персональное предложение, если найдете цену ниже
+                                    </p>
+                                </article>
+                            </div>
+                            <div class="swiper-slide">
+                                <article class="card card--advantages">
+                                    <div class="card__image-wrapper">
+                                        <img src="img/card/advantages/heart.svg" alt="">
+                                    </div>
+                                    <h4 class="card__title">Надёжная <br>
+                                        упаковка</h4>
+                                    <p class="card__text">Даем гарантию 99%, что покупка дойдет целой. В другом
+                                        случае
+                                        отправим новый</p>
+                                </article>
+                            </div>
+                            <div class="swiper-slide">
+                                <article class="card card--advantages">
+                                    <div class="card__image-wrapper">
+                                        <img src="img/card/advantages/gift.svg" alt="">
+                                    </div>
+                                    <h4 class="card__title">Полезные <br>
+                                        бонусы</h4>
+                                    <p class="card__text">Каждый покупатель получает фирменные сувениры: полянки,
+                                        зажигалку,
+                                        контейнер</p>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section> <!-- end of section advantages-->
