--- a/src/product.html
+++ b/src/product.html
@@ -807,7 +807,10 @@
                             <button type="button" class="btn btn--category"> Лакшери</button>
                             <button type="button" class="btn btn--category"> Толстое стекло</button>
                             <button type="button" class="btn btn--category"> Стеклянные</button>
+
                         </div>
+
+                        <div class="decor"></div>
                     </div>
                 </section>
             </div>
