feat: add range js

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -115,17 +115,23 @@
                                 <div class="sidebar__block-content">
                                     <div class="range-slider">
                                         <div class="range-slider__header">
-                                            <span class="range-slider__header-min">
-
+                                            <span class="range-slider__header-caption range-slider__header-min">
+                                                3 315 ₽
                                             </span>
-                                            <span class="range-slider__header-max">
-
+                                            <span class="range-slider__header-caption range-slider__header-max">
+                                                43 225 ₽
                                             </span>
                                         </div>
                                         <div class="range-slider__body">
-                                            <input type="range" class="range-slider__input" value="3315" min="100"
-                                                max="50000" step="5">
-                                            <input type="range" class="range-slider__input" value="43225">
+                                            <input type="range" class="range-slider__input range-slider__input--1"
+                                                value="3315" min="100" max="50000" step="5">
+                                            <input type="range" class="range-slider__input range-slider__input--2"
+                                                value="43100" min="100" max="50000" step="5">
+                                        </div>
+
+                                        <div class="range-slider__footer">
+                                            <span class="range-slider__footer-from"> от</span>
+                                            <span class="range-slider__footer-to"> до</span>
                                         </div>
                                     </div>
                                 </div>
@@ -308,17 +314,23 @@
                                 <div class="sidebar__block-content">
                                     <div class="range-slider">
                                         <div class="range-slider__header">
-                                            <span class="range-slider__header-min">
-
+                                            <span class="range-slider__header-caption range-slider__header-min">
+                                                9 cм
                                             </span>
-                                            <span class="range-slider__header-max">
-
+                                            <span class="range-slider__header-caption range-slider__header-max">
+                                                100см
                                             </span>
                                         </div>
                                         <div class="range-slider__body">
-                                            <input type="range" class="range-slider__input" value="3315" min="100"
-                                                max="50000" step="5">
-                                            <input type="range" class="range-slider__input" value="43225">
+                                            <input type="range" class="range-slider__input range-slider__input--1"
+                                                value="9" min="5" max="100" step="1">
+                                            <input type="range" class="range-slider__input range-slider__input--2"
+                                                value="100" min="5" max="100" step="1">
+                                        </div>
+
+                                        <div class="range-slider__footer">
+                                            <span class="range-slider__footer-from"> от</span>
+                                            <span class="range-slider__footer-to"> до</span>
                                         </div>
                                     </div>
                                 </div>
