--- a/src/product.html
+++ b/src/product.html
@@ -1504,7 +1504,7 @@
             <section class="section section--manufacturer-goods">
                 <div class="section__inner">
                     <h2 class="section__title">
-                        Другие товары категории
+                        Товары производителя
                     </h2>
 
                     <div class="container container--sm">
