feat: add reviews page adaptive

--- a/src/reviews.html
+++ b/src/reviews.html
@@ -243,20 +243,35 @@
                                 <strong>4.1</strong>
                             </button>
                             <button type="button" class="btn tabs__btn" data-target="2gis">
+                                <span class="tabs__btn-icon">
+                                    <img src="img/tabs/reviews/2gis.jpg" alt="">
+                                </span>
                                 2ГИС
                                 <strong>2.5</strong>
                             </button>
                             <button type="button" class="btn tabs__btn" data-target="ymaps">
+                                <span class="tabs__btn-icon">
+                                    <img src="img/tabs/reviews/ymaps.jpg" alt="">
+                                </span>
                                 Яндекс.Карты
                                 <strong>4.9</strong>
                             </button>
                             <button type="button" class="btn tabs__btn" data-target="gmaps">
+                                <span class="tabs__btn-icon">
+                                    <img src="img/tabs/reviews/gmaps.jpg" alt="">
+                                </span>
                                 Google Maps
                                 <strong>4.9</strong>
                             </button>
                             <button type="button" class="btn tabs__btn" data-target="vk">
+                                <span class="tabs__btn-icon">
+                                    <img src="img/tabs/reviews/vk.jpg" alt="">
+                                </span>
                                 Вконтакте
                             </button>
+                            <a href="#" class="tabs__made">
+                                Сделано на ReviewLab
+                            </a>
                         </div>
 
                         <div class="container container--sm">
@@ -324,6 +339,7 @@
                                                     readable content of a page when looking at its layout. The point of
                                                     using Lorem Ipsum is that it has a more-or-less normal
                                                 </p>
+                                                <a href="#" class="card__expand-text">🠕 свернуть</a>
 
                                                 <div class="card__footer">
                                                     <span>Отзыв из Яндекс.карт</span>
@@ -386,10 +402,9 @@
 
                                                 <p class="card__text">
                                                     It is a long established fact that a reader will be distracted by
-                                                    the
-                                                    readable content of a page when looking at its layout. The point of
-                                                    using Lorem Ipsum is that it has a more-or-less normal
+                                                    the readable content of a page when looking at its layout.
                                                 </p>
+                                                <a href="#" class="card__expand-text">🠕 свернуть</a>
 
                                                 <div class="card__footer">
                                                     <span>Отзыв из 2ГИС</span>
@@ -456,6 +471,7 @@
                                                     readable content of a page when looking at its layout. The point of
                                                     using Lorem Ipsum is that it has a more-or-less normal
                                                 </p>
+                                                <a href="#" class="card__expand-text">🠕 свернуть</a>
 
                                                 <div class="card__footer">
                                                     <span>Отзыв из Яндекс.карт</span>
@@ -517,11 +533,9 @@
                                                 </div>
 
                                                 <p class="card__text">
-                                                    It is a long established fact that a reader will be distracted by
-                                                    the
-                                                    readable content of a page when looking at its layout. The point of
-                                                    using Lorem Ipsum is that it has a more-or-less normal
+                                                    It is a long established fact that a reader will be distracted :)
                                                 </p>
+                                                <a href="#" class="card__expand-text">🠕 свернуть</a>
 
                                                 <div class="card__footer">
                                                     <span>Отзыв из Яндекс.карт</span>
