fix: margins, btn width, banner, range js

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     @@include('html/partials/header.html')
 
     <!-- main -->
-    <main>
+    <main class="main main--index">
         <!-- banner -->
         <div class="container container--md">
             <div class="banner banner--main">
@@ -715,7 +715,7 @@
 
         <!-- section advantages -->
         <section class="section section--advantages">
-            <div class="container container--sm">
+            <div class="container container--md">
                 <div class="section__inner">
                     <h1 class="section__title">Преимущества</h1>
                     <div class="section__content">
@@ -813,7 +813,7 @@
 
         <!-- section brands -->
         <section class="section section--brands">
-            <div class="container container--sm">
+            <div class="container container--md">
                 <div class="section__inner">
                     <h1 class="section__title">Бренды</h1>
                     <div class="section__content">
@@ -829,7 +829,7 @@
 
         <!-- banner 2 -->
         <div class="banner banner--2">
-            <div class="container container--sm">
+            <div class="container container--md">
                 <div class="banner__inner">
                     <p class="banner__text">
                         Подпишись на рассылку и получи
@@ -847,7 +847,7 @@
 
         <!-- section about us -->
         <section class="section section--about">
-            <div class="container container--sm">
+            <div class="container container--md">
                 <div class="section__inner">
                     <picture>
                         <source srcset="img/section/about/bong.jpg">
