--- a/src/product.html
+++ b/src/product.html
@@ -452,7 +452,7 @@
                         С этим товаром покупают
                     </h3>
 
-                    <div class="container container--sm">
+                    <div class="container container--md">
                         <div class="section__content">
                             <div class="swiper swiper--recommendations">
                                 <!-- Additional required wrapper -->
@@ -794,26 +794,26 @@
                         </div>
                     </div>
                 </section> <!-- end of section recommendation-->
-
-                <!-- section categories -->
-                <section class="section section--sm section--categories">
-                    <div class="section__inner">
-                        <div class="section__title">Категории</div>
-
-                        <div class="section__content">
-                            <button type="button" class="btn btn--category"> Большие</button>
-                            <button type="button" class="btn btn--category"> Бонги</button>
-                            <button type="button" class="btn btn--category"> Производители</button>
-                            <button type="button" class="btn btn--category"> Лакшери</button>
-                            <button type="button" class="btn btn--category"> Толстое стекло</button>
-                            <button type="button" class="btn btn--category"> Стеклянные</button>
-
-                        </div>
-
-                        <div class="decor"></div>
-                    </div>
-                </section>
             </div>
+            <!-- section categories -->
+            <section class="section section--sm section--categories">
+                <div class="section__inner">
+                    <div class="section__title">Категории</div>
+
+                    <div class="section__content">
+                        <button type="button" class="btn btn--category"> Большие</button>
+                        <button type="button" class="btn btn--category"> Бонги</button>
+                        <button type="button" class="btn btn--category"> Производители</button>
+                        <button type="button" class="btn btn--category"> Лакшери</button>
+                        <button type="button" class="btn btn--category"> Толстое стекло</button>
+                        <button type="button" class="btn btn--category"> Стеклянные</button>
+
+                    </div>
+
+                    <div class="decor"></div>
+                </div>
+            </section>
+
 
             <!-- tabs -->
             <div class="tabs">
