--- a/src/reviews.html
+++ b/src/reviews.html
@@ -11,11 +11,11 @@
     @@include('html/partials/header.html')
 
     <!-- main -->
-    <main class="main main--catalog">
+    <main class="main main--reviews">
 
         <div class="container container--md">
             <!-- breadcrumbs -->
-            <ul class="breadcrumbs">
+            <ul class="breadcrumbs breadcrumbs--reviews">
                 <li class="breadcrumbs__item">
                     <a class="breadcrumbs__link" href="index.html">Главная</a>
                 </li>
